--- a/Pinboard/Base.lproj/Main.storyboard
+++ b/Pinboard/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -65,7 +66,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tTD-Ss-xme" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-156" y="-282"/>
+            <point key="canvasLocation" x="-156" y="-282.00899550224892"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="zap-Wm-9bF">
@@ -82,6 +83,93 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hyW-cd-FPc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1108" y="-282"/>
+        </scene>
+        <!--Pins Collection View Controller-->
+        <scene sceneID="kBe-Ch-PVD">
+            <objects>
+                <collectionViewController id="4bM-yY-Nkp" customClass="PinsCollectionViewController" customModule="Pinboard" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="nM6-SM-ZkP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <collectionViewLayout key="collectionViewLayout" id="rTc-l5-eE0" customClass="PinterestLayout" customModule="Pinboard" customModuleProvider="target"/>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PinsCell" id="Rgi-Qy-bko" customClass="PinCollectionViewCell" customModule="Pinboard" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="EJA-Gh-VZC">
+                                            <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="caa-v2-lED">
+                                                    <rect key="frame" x="0.0" y="0.0" width="180" height="120"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="120" id="VAD-2z-zaI"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWv-vM-Wvm">
+                                                    <rect key="frame" x="4" y="124" width="172" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="17" id="YP1-n5-P4J"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="12"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comment" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hbc-ys-Vy6">
+                                                    <rect key="frame" x="4" y="141" width="172" height="14"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.66666666669999997" alpha="0.68561241610000001" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="cWv-vM-Wvm" firstAttribute="leading" secondItem="EJA-Gh-VZC" secondAttribute="leading" constant="4" id="1CP-NP-yHh"/>
+                                                <constraint firstAttribute="trailing" secondItem="caa-v2-lED" secondAttribute="trailing" id="Bt5-mt-hzz"/>
+                                                <constraint firstAttribute="trailing" secondItem="cWv-vM-Wvm" secondAttribute="trailing" constant="4" id="SJA-hI-nB1"/>
+                                                <constraint firstItem="caa-v2-lED" firstAttribute="leading" secondItem="EJA-Gh-VZC" secondAttribute="leading" id="TKT-GS-5hY"/>
+                                                <constraint firstItem="cWv-vM-Wvm" firstAttribute="top" secondItem="caa-v2-lED" secondAttribute="bottom" constant="4" id="Tvl-if-lPt"/>
+                                                <constraint firstItem="Hbc-ys-Vy6" firstAttribute="top" secondItem="cWv-vM-Wvm" secondAttribute="bottom" id="Yqi-9t-awu"/>
+                                                <constraint firstAttribute="trailing" secondItem="Hbc-ys-Vy6" secondAttribute="trailing" constant="4" id="fkD-3p-6eR"/>
+                                                <constraint firstItem="caa-v2-lED" firstAttribute="top" secondItem="EJA-Gh-VZC" secondAttribute="top" id="ofe-L4-EES"/>
+                                                <constraint firstItem="Hbc-ys-Vy6" firstAttribute="leading" secondItem="EJA-Gh-VZC" secondAttribute="leading" constant="4" id="vfh-ca-DHr"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                    <integer key="value" value="6"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="EJA-Gh-VZC" firstAttribute="top" secondItem="Rgi-Qy-bko" secondAttribute="top" id="1Lq-Gr-HUd"/>
+                                    <constraint firstItem="EJA-Gh-VZC" firstAttribute="leading" secondItem="Rgi-Qy-bko" secondAttribute="leading" id="A5m-NV-uR0"/>
+                                    <constraint firstAttribute="trailing" secondItem="EJA-Gh-VZC" secondAttribute="trailing" id="flf-AP-hx7"/>
+                                    <constraint firstAttribute="bottom" secondItem="EJA-Gh-VZC" secondAttribute="bottom" id="gLv-gQ-cBF"/>
+                                </constraints>
+                                <size key="customSize" width="180" height="180"/>
+                                <connections>
+                                    <outlet property="captionLabel" destination="cWv-vM-Wvm" id="fg9-Ef-cDE"/>
+                                    <outlet property="commentLabel" destination="Hbc-ys-Vy6" id="yD1-z8-guD"/>
+                                    <outlet property="imageView" destination="caa-v2-lED" id="i7z-38-d82"/>
+                                    <outlet property="imageViewHeightLayoutConstraint" destination="VAD-2z-zaI" id="Gti-aH-cpt"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="4bM-yY-Nkp" id="9lO-ho-Azc"/>
+                            <outlet property="delegate" destination="4bM-yY-Nkp" id="ZAc-HS-jvT"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WTb-nV-PLF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="512" y="381"/>
         </scene>
     </scenes>
 </document>
